--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "swagger-ui",
+  "name": "Outgrow Public API",
   "author": "Outgrow <tarun@outgrow.co>",
   "contributors": [
     {
-      "name": "Vivek Kuamr",
-      "email": "vivek.kumar@venturepact.com"
+      "name": "Outgrow",
+      "email": "admin@venturepact.com"
     }
   ],
-  "description": "Swagger UI is a dependency-free collection of HTML, JavaScript, and CSS assets that dynamically generate beautiful documentation from a Swagger-compliant API",
-  "version": "2.1.1-M2",
-  "homepage": "http://swagger.io",
-  "license": "Apache 2.0",
+  "description": "Outgrow Public API",
+  "version": "0.0.1",
+  "homepage": "https://outgrow.co",
+  "license": "",
   "scripts": {
     "build": "gulp",
     "serve": "gulp serve",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/swagger-api/swagger-ui.git"
+    "url": "https://github.com/venturepact/og-public-api.git"
   },
   "readmeFilename": "README.md",
   "devDependencies": {
